refactor: URLクラスの非推奨対応